--- a/index.html
+++ b/index.html
@@ -67,30 +67,31 @@
       </section>
       <section class="section-two">
         <div class="container">
+          <h2 class="visually-hidden"></h2>
           <ul class="section-two-list">
             <li class="section-two-item">
-              <h2 class="section-two-title">Strategy</h2>
+              <h3 class="section-two-title">Strategy</h3>
               <p class="section-two-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
             <li class="section-two-item">
-              <h2 class="section-two-title">Punctuality</h2>
+              <h3 class="section-two-title">Punctuality</h3>
               <p class="section-two-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
             <li class="section-two-item">
-              <h2 class="section-two-title">Diligence</h2>
+              <h3 class="section-two-title">Diligence</h3>
               <p class="section-two-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
             <li class="section-two-item">
-              <h2 class="section-two-title">Technologies</h2>
+              <h3 class="section-two-title">Technologies</h3>
               <p class="section-two-text">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
@@ -110,8 +111,10 @@
                 width="264"
                 class="team-item-img"
               />
-              <h3 class="team-item-title">Mark Guerrero</h3>
-              <p class="team-item-text">Product Designer</p>
+              <div class="team-item-container">
+                <h3 class="team-item-title">Mark Guerrero</h3>
+                <p class="team-item-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -120,8 +123,10 @@
                 width="264"
                 class="team-item-img"
               />
-              <h3 class="team-item-title">Tom Ford</h3>
-              <p class="team-item-text">Frontend Developer</p>
+              <div class="team-item-container">
+                <h3 class="team-item-title">Tom Ford</h3>
+                <p class="team-item-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -130,8 +135,10 @@
                 width="264"
                 class="team-item-img"
               />
-              <h3 class="team-item-title">Camila Garcia</h3>
-              <p class="team-item-text">Marketing</p>
+              <div class="team-item-container">
+                <h3 class="team-item-title">Camila Garcia</h3>
+                <p class="team-item-text">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -140,8 +147,10 @@
                 width="264"
                 class="team-item-img"
               />
-              <h3 class="team-item-title">Daniel Wilson</h3>
-              <p class="team-item-text">UI Designer</p>
+              <div class="team-item-container">
+                <h3 class="team-item-title">Daniel Wilson</h3>
+                <p class="team-item-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -157,8 +166,10 @@
                 width="360"
                 class="portfolio-item-img"
               />
-              <h3 class="portfolio-item-title">Banking App</h3>
-              <p class="portfolio-item-text">App</p>
+              <div class="portfolio-item-container">
+                <h3 class="portfolio-item-title">Banking App</h3>
+                <p class="portfolio-item-text">App</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -167,8 +178,10 @@
                 width="360"
                 class="portfolio-item-img"
               />
-              <h3 class="portfolio-item-title">Cashless Payment</h3>
-              <p class="portfolio-item-text">Marketing</p>
+              <div class="portfolio-item-container">
+                <h3 class="portfolio-item-title">Cashless Payment</h3>
+                <p class="portfolio-item-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -177,8 +190,10 @@
                 width="360"
                 class="portfolio-item-img"
               />
-              <h3 class="portfolio-item-title">Meditation App</h3>
-              <p class="portfolio-item-text">App</p>
+              <div class="portfolio-item-container">
+                <h3 class="portfolio-item-title">Meditation App</h3>
+                <p class="portfolio-item-text">App</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -187,8 +202,10 @@
                 width="360"
                 class="portfolio-item-img"
               />
-              <h3 class="portfolio-item-title">Taxi Service</h3>
-              <p class="portfolio-item-text">Marketing</p>
+              <div class="portfolio-item-container">
+                <h3 class="portfolio-item-title">Taxi Service</h3>
+                <p class="portfolio-item-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -197,8 +214,10 @@
                 width="360"
                 class="portfolio-item-img"
               />
-              <h3 class="portfolio-item-title">Screen Illustrations</h3>
-              <p class="portfolio-item-text">Design</p>
+              <div class="portfolio-item-container">
+                <h3 class="portfolio-item-title">Screen Illustrations</h3>
+                <p class="portfolio-item-text">Design</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -207,8 +226,10 @@
                 width="360"
                 class="portfolio-item-img"
               />
-              <h3 class="portfolio-item-title">Online Courses</h3>
-              <p class="portfolio-item-text">Marketing</p>
+              <div class="portfolio-item-container">
+                <h3 class="portfolio-item-title">Online Courses</h3>
+                <p class="portfolio-item-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
