--- a/index.html
+++ b/index.html
@@ -44,18 +44,21 @@
             </li>
           </ul>
         </nav>
-        <adress class="header-adress">
-          <ul class="header-adress-list">
-            <li class="header-adress-item">
-              <a href="mailto:info@devstudio.com" class="header-adress-link"></a
+        <address class="header-address">
+          <ul class="header-address-list">
+            <li class="header-address-item">
+              <a
+                href="mailto:info@devstudio.com"
+                class="header-address-link"
+              ></a
               >info@devstudio.com
             </li>
-            <li class="header-adress-item">
-              <a href="tel:+110001111111" class="header-adress-link"></a>+11
+            <li class="header-address-item">
+              <a href="tel:+110001111111" class="header-address-link"></a>+11
               (000) 111-11-11
             </li>
           </ul>
-        </adress>
+        </address>
       </div>
     </header>
     <main class="main">
@@ -67,7 +70,7 @@
       </section>
       <section class="section-two">
         <div class="container">
-          <h2 class="visually-hidden"></h2>
+          <h2 class="visually-hidden">Lorem ipsum dolor</h2>
           <ul class="section-two-list">
             <li class="section-two-item">
               <h3 class="section-two-title">Strategy</h3>
