--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
           >
           <ul class="header-nav-list">
             <li class="header-nav-item">
-              <a href="/" class="header-nav-link"></a>Studio
+              <a href="/" class="header-nav-link">Studio</a>
             </li>
             <li class="header-nav-item">
-              <a href="/" class="header-nav-link"></a>Portfolio
+              <a href="/" class="header-nav-link">Portfolio</a>
             </li>
             <li class="header-nav-item">
-              <a href="/" class="header-nav-link"></a>Contacts
+              <a href="/" class="header-nav-link">Contacts</a>
             </li>
           </ul>
         </nav>
