--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
               <a
                 href="mailto:info@devstudio.com"
                 class="header-address-link"
-              ></a
-              >info@devstudio.com
+              >info@devstudio.com</a
+              >
             </li>
             <li class="header-address-item">
-              <a href="tel:+110001111111" class="header-address-link"></a>+11
-              (000) 111-11-11
+              <a href="tel:+110001111111" class="header-address-link">+11
+              (000) 111-11-11</a>
             </li>
           </ul>
         </address>
